--- a/VCFv4.5.draft.tex
+++ b/VCFv4.5.draft.tex
@@ -2734,6 +2734,12 @@ BCF2 files are expected to be indexed through the same index scheme, section~4 a
 	\item Clarified that $<$NON\_REF$>$ should be treated as an alias of $<$*$>$
 \end{itemize}
 
+\subsection{VCFv4.4 Errata}
+
+\begin{itemize}
+	\item Type=P added to FORMAT field type list (used by PSL/PSO fields)
+\end{itemize}
+
 \subsection{Changes between VCFv4.4 and VCFv4.3}
 
 \begin{itemize}
