Finalised VCFv4.5 specifications

--- a/VCFv4.5.tex
+++ b/VCFv4.5.tex
@@ -17,8 +17,8 @@
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 
 \begin{document}
-\input{VCFv4.5.draft.ver}
-\title{\huge \color{red} DRAFT SPEC SUBJECT TO CHANGE \\ The Variant Call Format Specification \\ \vspace{0.5em} \large VCFv4.5 and BCFv2.2}
+\input{VCFv4.5.ver}
+\title{The Variant Call Format Specification \\ \vspace{0.5em} \large VCFv4.5 and BCFv2.2}
 \date{\headdate}
 \maketitle
 \begin{quote}\small
