Add subtitles noting VCFv4.[1-4].pdf have been superseded by later versions
Adjust the v4.1 and v4.2 subtitles to account for newer specs. Add new
subtitles for v4.3 and v4.4. The previous v4.2 noted "[new spec] introduced
in October 2015" because the note was added years after the fact; we don't
need to emphasis that this time around as we're contemporaneous.

--- a/VCFv4.1.tex
+++ b/VCFv4.1.tex
@@ -9,7 +9,7 @@
 \input{VCFv4.1.ver}
 \title{The Variant Call Format (VCF) Version 4.1 Specification
 \normalsize\\[2ex]
-(Superseded by the \href{http://samtools.github.io/hts-specs/VCFv4.2.pdf}{VCF v4.2} and \href{http://samtools.github.io/hts-specs/VCFv4.3.pdf}{v4.3} specifications)}
+(Superseded by the \href{http://samtools.github.io/hts-specs/VCFv4.2.pdf}{VCF v4.2} through \href{http://samtools.github.io/hts-specs/VCFv4.5.pdf}{v4.5} specifications)}
 \date{\headdate}
 \maketitle
 \begin{quote}\small
