--- a/VCFv4.4.tex
+++ b/VCFv4.4.tex
@@ -18,7 +18,9 @@
 
 \begin{document}
 \input{VCFv4.4.ver}
-\title{The Variant Call Format Specification \\ \vspace{0.5em} \large VCFv4.4 and BCFv2.2}
+\title{The Variant Call Format Specification \\ \vspace{0.5em} \large VCFv4.4 and BCFv2.2
+\normalsize\\[2ex]
+(Superseded by the \href{http://samtools.github.io/hts-specs/VCFv4.5.pdf}{VCF v4.5} specification)}
 \date{\headdate}
 \maketitle
 \begin{quote}\small
