--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -18,7 +18,9 @@
 
 \begin{document}
 \input{VCFv4.3.ver}
-\title{The Variant Call Format Specification \\ \vspace{0.5em} \large VCFv4.3 and BCFv2.2}
+\title{The Variant Call Format Specification \\ \vspace{0.5em} \large VCFv4.3 and BCFv2.2
+\normalsize\\[2ex]
+(Superseded by the \href{http://samtools.github.io/hts-specs/VCFv4.4.pdf}{VCF v4.4} and \href{http://samtools.github.io/hts-specs/VCFv4.5.pdf}{v4.5} specifications)}
 \date{\headdate}
 \maketitle
 \begin{quote}\small
