--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -170,8 +170,8 @@ Size of the duplicate set that the template is part of.
 
 \item[DT:Z:\tagvalue{str}]
 (For duplicate templates) Either LB or SQ indicating the source of the duplication.
-Use LB if the duplication occured during library-construction (e.g., via PCR).
-Use SQ if the duplication occured during sequencing (e.g., due to imaging error, aka "optical duplicates", or due to
+Use LB if the duplication occurred during library-construction (e.g., via PCR).
+Use SQ if the duplication occurred during sequencing (e.g., due to imaging error, aka "optical duplicates", or due to
 over-aggressive bridge-amp).
 
 \item[GL:f:\tagvalue{score}]
