--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -209,7 +209,7 @@ encoding and therefore this encoding is called ITF-8 (Integer Transformation For
 The most significant bits of the first byte have special meaning and are called 
 `prefix'. These are 0 to 3 true bits followed by a 0 or 4 true bits. 
 The number of 1's denote  the number of bytes to follow. So 0 for no bytes, 10 
-for 1 byte, 110 for two bytes, 1110 for three bytes and 1111 for four bytes.
+for one byte, 110 for two bytes, 1110 for three bytes and 1111 for four bytes.
 To accommodate 32 bits such representation requires 
 5 bytes with only 4 lower bits used in the last byte 5.
 
