Write 21100 bases as ~21 kilobases rather than kibibases [minor]

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -874,7 +874,7 @@ The following page contains examples of structural variants encoded in VCF, show
   \item An imprecise deletion of approximately 205 bp.
   \item An imprecise deletion of an ALU element relative to the reference.
   \item An imprecise insertion of an L1 element relative to the reference.
-  \item An imprecise duplication of approximately 21Kb. The sample genotype is copy number 3 (one extra copy of the duplicated sequence).
+  \item An imprecise duplication of approximately 21kb. The sample genotype is copy number 3 (one extra copy of the duplicated sequence).
   \item An imprecise tandem duplication of 76bp. The sample genotype is copy number 5 (but the two haplotypes are not known).
 \end{enumerate}
 
