--- a/CRAMv2.1.tex
+++ b/CRAMv2.1.tex
@@ -1668,11 +1668,11 @@ $\bullet$ Streaming is more convenient for small containers
 
 $\bullet$ Applications typically buffer containers into memory
 
-We recommend 1MB containers. They are small enough to provide good random access 
+We recommend 1MiB containers. They are small enough to provide good random access
 and streaming performance while being large enough to provide good compression. 
-1MB containers are also small enough to fit into the L2 cache of most modern CPUs.
+1MiB containers are also small enough to fit into the L2 cache of most modern CPUs.
 
-Some simplified examples are provided below to fit data into 1MB containers.
+Some simplified examples are provided below to fit data into 1MiB containers.
 
 \textbf{Unmapped short reads with bases, read names, recalibrated and original 
 quality scores}
@@ -1681,27 +1681,27 @@ We have 10,000 unmapped short reads (100bp) with read names, recalibrated and or
 quality scores. We estimate 0.4 bits/base (read names) + 0.4 bits/base (bases) 
 + 3 bits/base (recalibrated quality scores) + 3 bits/base (original quality scores) 
 =\textasciitilde{} 7 bits/base. Space estimate is (10,000 * 100 * 7) / 8 / 1024 
-/ 1024 =\textasciitilde{} 0.9 MB. Data could be stored in a single container.
+/ 1024 =\textasciitilde{} 0.9 MiB. Data could be stored in a single container.
 
 \textbf{Unmapped long reads with bases, read names and quality scores}
 
 We have 10,000 unmapped long reads (10kb) with read names and quality scores. We 
 estimate: 0.4 bits/base (bases) + 3 bits/base (original quality scores) =\textasciitilde{} 
 3.5 bits/base. Space estimate is (10,000 * 10,000 * 3.5) / 8 / 1024 / 1024 =\textasciitilde{} 
-42 MB. Data could be stored in 42 x 1MB containers.
+42 MiB. Data could be stored in 42 x 1MiB containers.
 
 \textbf{Mapped short reads with bases, pairing and mapping information}
 
 We have 250,000 mapped short reads (100bp) with bases, pairing and mapping information. 
 We estimate the compression to be 0.2 bits/base. Space estimate is (250,000 * 100 
-* 0.2) / 8 / 1024 / 1024 =\textasciitilde{} 0.6 MB. Data could be stored in a single 
+* 0.2) / 8 / 1024 / 1024 =\textasciitilde{} 0.6 MiB. Data could be stored in a single
 container.
 
 \textbf{Embedded reference sequences}
 
 We have a reference sequence (10Mb). We estimate the compression to be 2 bits/base. 
-Space estimate is (10000000 * 2 / 8 / 1024 / 1024) =\textasciitilde{} 2.4MB. Data 
-could be written into three containers: 1MB + 1MB + 0.4MB.
+Space estimate is (10000000 * 2 / 8 / 1024 / 1024) =\textasciitilde{} 2.4MiB. Data
+could be written into three containers: 1MiB + 1MiB + 0.4MiB.
 
 \newpage
 
