--- a/VCFv4.1.tex
+++ b/VCFv4.1.tex
@@ -957,8 +957,8 @@ Haplotype quality & 30 & 40 & 40 \\
 VCF is very expressive, accommodates multiple samples, and is widely used
 in the community.  Its biggest drawback is that it is big and slow.
 Files are text and therefore require a lot of space on disk.  A normal batch
-of \~100~exomes is a few GB, but large-scale VCFs with thousands of exome
-samples quickly become hundreds of GBs.  Because the file is text, it is
+of \~100~exomes is a few gigabytes, but large-scale VCFs with thousands of exome
+samples quickly become hundreds of gigabytes.  Because the file is text, it is
 extremely slow to parse.
 
 Overall, the idea behind is BCF2 is simple.  BCF2 is a binary, compressed
