--- a/VCFv4.4.tex
+++ b/VCFv4.4.tex
@@ -1882,7 +1882,7 @@ chr1 1000000 . T <CNV:TR> . . END=20000;SVLEN=20000;CN=1.25;RUL=10000;RUC=5;RUB=
 VCF is very expressive, accommodates multiple samples, and is widely used in the community.
 Its biggest drawback is that it is big and slow.
 Files are text and therefore require a lot of space on disk.
-A normal batch of a hundred exomes is a few GB, but large-scale VCFs with thousands of exome samples quickly become hundreds of GBs.
+A normal batch of a hundred exomes is a few gigabytes, but large-scale VCFs with thousands of exome samples quickly become hundreds of gigabytes.
 Because the file is text, it is extremely slow to parse.
 
 Overall, the idea behind is BCF2 is simple.
