Minor kb and gigabytes notation improvements for all VCF specs (#840)
* Write 21100 bases as ~21 kilobases rather than kibibases [minor]

* Write out GB as "gigabytes" in this prose [minor]

---------

Co-authored-by: Fabian Klötzl <fabian@kloetzl.info>

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -874,7 +874,7 @@ The following page contains examples of structural variants encoded in VCF, show
   \item An imprecise deletion of approximately 205 bp.
   \item An imprecise deletion of an ALU element relative to the reference.
   \item An imprecise insertion of an L1 element relative to the reference.
-  \item An imprecise duplication of approximately 21Kb. The sample genotype is copy number 3 (one extra copy of the duplicated sequence).
+  \item An imprecise duplication of approximately 21kb. The sample genotype is copy number 3 (one extra copy of the duplicated sequence).
   \item An imprecise tandem duplication of 76bp. The sample genotype is copy number 5 (but the two haplotypes are not known).
 \end{enumerate}
 
@@ -1454,7 +1454,7 @@ Example records are given below:
 VCF is very expressive, accommodates multiple samples, and is widely used in the community.
 Its biggest drawback is that it is big and slow.
 Files are text and therefore require a lot of space on disk.
-A normal batch of a hundred exomes is a few GB, but large-scale VCFs with thousands of exome samples quickly become hundreds of GBs.
+A normal batch of a hundred exomes is a few gigabytes, but large-scale VCFs with thousands of exome samples quickly become hundreds of gigabytes.
 Because the file is text, it is extremely slow to parse.
 
 Overall, the idea behind is BCF2 is simple.
