Fixed <INV> example POS and REF (#836)

--- a/VCFv4.2.tex
+++ b/VCFv4.2.tex
@@ -748,7 +748,7 @@ can be described equivalently in two ways. Either one uses the short hand notati
 \small
 \begin{tabular}{ l l l l l l l l }
 \#CHROM & POS & ID & REF & ALT & QUAL & FILTER & INFO \\
-2 & 321682 & INV0 & T & $<$INV$>$ & 6 & PASS & SVTYPE=INV;END=421681 \\
+2 & 321681 & INV0 & G & $<$INV$>$ & 6 & PASS & SVTYPE=INV;END=421681 \\
 \end{tabular}
 \normalsize
 \vspace{0.3cm}
