--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -1158,7 +1158,7 @@ Either one uses the short hand notation described previously (recommended for si
 \small
 \begin{tabular}{ l l l l l l l l }
 \#CHROM & POS & ID & REF & ALT & QUAL & FILTER & INFO \\
-2 & 321682 & INV0 & T & $<$INV$>$ & 6 & PASS & SVTYPE=INV;END=421681 \\
+2 & 321681 & INV0 & G & $<$INV$>$ & 6 & PASS & SVTYPE=INV;END=421681 \\
 \end{tabular}
 \normalsize
 \vspace{0.3cm}
