--- a/VCFv4.5.tex
+++ b/VCFv4.5.tex
@@ -1627,7 +1627,7 @@ Either one uses the short hand notation described previously (recommended for si
 \small
 \begin{tabular}{ l l l l l l l l }
 \#CHROM & POS & ID & REF & ALT & QUAL & FILTER & INFO \\
-2 & 321681 & INV0 & T & $<$INV$>$ & 6 & PASS & SVLEN=100000 \\
+2 & 321681 & INV0 & G & $<$INV$>$ & 6 & PASS & SVLEN=100000 \\
 \end{tabular}
 \normalsize
 \vspace{0.3cm}
