Fixed <INV> example POS and REF (#836) (#843) in a all VCF versions
* Fixed <INV> example POS and REF (#836)
* Adjusting to make minimal change to the example

--- a/VCFv4.4.tex
+++ b/VCFv4.4.tex
@@ -1467,7 +1467,7 @@ Either one uses the short hand notation described previously (recommended for si
 \small
 \begin{tabular}{ l l l l l l l l }
 \#CHROM & POS & ID & REF & ALT & QUAL & FILTER & INFO \\
-2 & 321681 & INV0 & T & $<$INV$>$ & 6 & PASS & END=421681 \\
+2 & 321681 & INV0 & G & $<$INV$>$ & 6 & PASS & END=421681 \\
 \end{tabular}
 \normalsize
 \vspace{0.3cm}
